--- a/web/i18n/en/settings.json
+++ b/web/i18n/en/settings.json
@@ -52,7 +52,7 @@
 
     "audio.youtube.dub": "youtube",
     "audio.youtube.dub.title": "use browser language for dubbed videos",
-    "audio.youtube.dub.description": "works even if cobalt isn't translated to your language.",
+    "audio.youtube.dub.description": "works even if astatine isn't translated to your language.",
 
     "audio.tiktok.original": "tiktok",
     "audio.tiktok.original.title": "use original sound",
@@ -63,7 +63,7 @@
     "metadata.filename.basic": "basic",
     "metadata.filename.pretty": "pretty",
     "metadata.filename.nerdy": "nerdy",
-    "metadata.filename.description": "filename style using which cobalt files will be downloaded. this description is temporary as there's no dynamic preview component yet.",
+    "metadata.filename.description": "filename style using which astatine files will be downloaded. this description is temporary as there's no dynamic preview component yet.",
 
     "metadata.file": "file metadata",
     "metadata.disable.title": "disable file metadata",
@@ -87,7 +87,7 @@
 
     "privacy.analytics": "anonymous traffic analytics",
     "privacy.analytics.title": "don't contribute to analytics",
-    "privacy.analytics.description": "we use a self-hosted plausible instance for getting an approximate number of active cobalt users. no identifiable information about you is ever stored. all processed data is anonymized and aggregated.\n\nplausible does not use any cookies and is fully compliant with GDPR, CCPA, and PECR.",
+    "privacy.analytics.description": "we use a self-hosted plausible instance for getting an approximate number of active astatine users. no identifiable information about you is ever stored. all processed data is anonymized and aggregated.\n\nplausible does not use any cookies and is fully compliant with GDPR, CCPA, and PECR.",
     "privacy.analytics.learnmore": "learn more about plausible's dedication to privacy.",
 
     "advanced.debug": "debug",
